--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/node": "^16.11.6",
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "https": "^1.0.0"
   }
 }
